kube-compose-springboot.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: springboot-svc
spec:
  type: NodePort 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8079
    nodePort: 30001
  selector:
    run: springboot
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: springboot
  name: springboot-ds
spec:
  replicas: 1
  selector:
    matchLabels:
      run: springboot
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: springboot
    spec:
      containers:
      - image: amikshas/a-gs-spring-boot-docker:2021-24_1
        name: springboot
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
status: {}
