kube-compose-springboot1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-ds
  namespace: Default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: springboot
  template:
    metadata:
      labels:
        run: springboot
    spec:
      containers:
      - name: springboot
        image: amikshas/a-gs-spring-boot-docker:2021-24_1
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-svc
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    run: springboot
  namespace: Default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8081
    nodePort: 30011
  selector:
    run: springboot
